--- a/src/datalogging/package.xml
+++ b/src/datalogging/package.xml
@@ -2,8 +2,8 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>datalogging</name>
-  <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <version>0.0.1</version>
+  <description>Logs all the data being published by each node</description>
   <maintainer email="mfarquharson1064@gmail.com">farquham</maintainer>
   <license>Apache-2.0</license>
 
@@ -17,6 +17,7 @@
   <depend>rclcpp</depend>
   <depend>geometry_msgs</depend>
   <depend>rosdeps</depend>
+  <depend>commsmsgs</depend>
 
   <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
   <build_export_depend>eigen</build_export_depend>
