--- a/src/b_rim/package.xml
+++ b/src/b_rim/package.xml
@@ -16,6 +16,7 @@
 
   <depend>rclcpp</depend>
   <depend>geometry_msgs</depend>
+  <depend>commsmsgs</depend>
 
   <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
   <build_export_depend>eigen</build_export_depend>
