--- a/src/r_rim/package.xml
+++ b/src/r_rim/package.xml
@@ -17,6 +17,7 @@
   <depend>rclcpp</depend>
   <depend>geometry_msgs</depend>
   <depend>rosdeps</depend>
+  <depend>commsmsgs</depend>
 
   <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
   <build_export_depend>eigen</build_export_depend>
