--- a/src/commsmsgs/package.xml
+++ b/src/commsmsgs/package.xml
@@ -12,6 +12,7 @@
 
   <depend>builtin_interfaces</depend>
   <depend>geometry_msgs</depend>
+  <depend>rosdeps</depend>
 
   <exec_depend>rosidl_default_runtime</exec_depend>
 
