--- a/src/rb_quad_sim/package.xml
+++ b/src/rb_quad_sim/package.xml
@@ -16,7 +16,9 @@
 
   <depend>rclcpp</depend>
   <depend>geometry_msgs</depend>
+  <depend>std_msgs</depend>
   <depend>rosdeps</depend>
+  <depend>commsmsgs</depend>
 
   <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
   <build_export_depend>eigen</build_export_depend>
