--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,7 +80,8 @@
         "typeindex": "cpp",
         "typeinfo": "cpp",
         "valarray": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "*.ipp": "cpp"
     },
     "python.autoComplete.extraPaths": [
         "/home/farquham/Desktop/GC_ros2_ws/Haptic-RW-UAS-Ground-Controller/install/visualizationInputs/lib/python3.10/site-packages",
