--- a/src/bmn/package.xml
+++ b/src/bmn/package.xml
@@ -2,8 +2,8 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>bmn</name>
-  <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <version>0.0.1</version>
+  <description>interfaces with the inverse 3 force feedback control and operates the bubble method navigation control loop</description>
   <maintainer email="mfarquharson1064@gmail.com">farquham</maintainer>
   <license>Apache-2.0</license>
 
@@ -16,6 +16,7 @@
 
   <depend>rclcpp</depend>
   <depend>geometry_msgs</depend>
+  <depend>std_msgs</depend>
   <depend>rosdeps</depend>
   <depend>commsmsgs</depend>
 
