--- a/src/datalogging/package.xml
+++ b/src/datalogging/package.xml
@@ -16,6 +16,7 @@
 
   <depend>rclcpp</depend>
   <depend>geometry_msgs</depend>
+  <depend>std_msgs</depend>
   <depend>rosdeps</depend>
   <depend>commsmsgs</depend>
 
