--- a/src/rpicomms/CMakeLists.txt
+++ b/src/rpicomms/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(rclcpp REQUIRED)
 find_package(eigen3_cmake_module REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(geometry_msgs REQUIRED)
+find_package(std_msgs REQUIRED)
 find_package(commsmsgs REQUIRED)
 
 if(BUILD_TESTING)
