--- a/src/visualization_inputs/package.xml
+++ b/src/visualization_inputs/package.xml
@@ -2,8 +2,8 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>visualization_inputs</name>
-  <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <version>0.0.1</version>
+  <description>handles all the visualization functionality also takes inputs from the user and forwards those</description>
   <maintainer email="mfarquharson1064@gmail.com">farquham</maintainer>
   <license>Apache-2.0</license>
 
