launch files should now be setup correctly, may have some issues with the matrices for the sim package

--- a/src/b_rim/package.xml
+++ b/src/b_rim/package.xml
@@ -7,6 +7,8 @@
   <maintainer email="mfarquharson1064@gmail.com">farquham</maintainer>
   <license>Apache-2.0</license>
 
+  <exec_depend>ros2launch</exec_depend>
+
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>eigen3_cmake_module</buildtool_depend>
   <build_depend>eigen</build_depend>
