--- a/src/commsmsgs/package.xml
+++ b/src/commsmsgs/package.xml
@@ -7,6 +7,8 @@
   <maintainer email="mfarquharson1064@gmail.com">farquham</maintainer>
   <license>Apache-2.0</license>
 
+  <exec_depend>ros2launch</exec_depend>
+
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
 
