--- a/src/bmn/CMakeLists.txt
+++ b/src/bmn/CMakeLists.txt
@@ -34,6 +34,14 @@ find_package(geometry_msgs REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(commsmsgs REQUIRED)
 
+add_executable(bmn_node src/bubblemethod.cpp)
+ament_target_dependencies(bmn_node rclcpp Eigen3 geometry_msgs std_msgs commsmsgs)
+
+install(TARGETS
+  bmn_node
+  DESTINATION lib/${PROJECT_NAME}
+)
+
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   # the following line skips the linter which checks for copyrights
