--- a/src/system_launcher/config/rbsim.yaml
+++ b/src/system_launcher/config/rbsim.yaml
@@ -6,10 +6,9 @@
     l: 0.3535          # length of drone
     w: 0.3535          # width of drone
     he: 0.306          # height of drone
-    In: 
-      - [0.02166666666666667, 0.0, 0.0]
-      - [0.0, 0.02166666666666667, 0.0]
-      - [0.0, 0.0, 0.04000000000000001]  # inertia matrix
+    In: [0.02166666666666667, 0.0, 0.0,
+        0.0, 0.02166666666666667, 0.0,
+        0.0, 0.0, 0.04000000000000001]  # inertia matrix
     mass: 1.5       # mass of drone
     con_rad: 0.5    # radius of drone
     prop_dia: 0.254   # diameter of propeller
@@ -33,20 +32,18 @@
     krd: [-0.015, 0.0026, 0.0006]  # derivative rate gains
     krff: [-0.002, -0.01, 0.004]  # feedforward rate gains
     vel_con_lims: [1.0, 1.0]  # velocity limits
-    n: 
-      - [-1.0, 0.0, 0.0]
-      - [1.0, 0.0, 0.0]
-      - [0.0, -1.0, 0.0]
-      - [0.0, 1.0, 0.0]
-      - [0.0, 0.0, -1.0]
-      - [0.0, 0.0, 1.0]  # normal vectors
-    nhat:
-      - [-1.0, 0.0, 0.0]
-      - [1.0, 0.0, 0.0]
-      - [0.0, -1.0, 0.0]
-      - [0.0, 1.0, 0.0]
-      - [0.0, 0.0, -1.0]
-      - [0.0, 0.0, 1.0]  # normal unit vectors
+    n: [-1.0, 0.0, 0.0,
+        1.0, 0.0, 0.0,
+        0.0, -1.0, 0.0,
+        0.0, 1.0, 0.0,
+        0.0, 0.0, -1.0,
+        0.0, 0.0, 1.0]  # normal vectors
+    nhat: [-1.0, 0.0, 0.0,
+        1.0, 0.0, 0.0,
+        0.0, -1.0, 0.0,
+        0.0, 1.0, 0.0,
+        0.0, 0.0, -1.0,
+        0.0, 0.0, 1.0]  # normal unit vectors
     poswall: 5.0 # position of wall
     negwall: -5.0 # position of wall
     d: [-1, 1, -1, 1, -2, 0]  # distance from origin for each wall; i1*poswall, i2*negwall, i3*poswall, i4*negwall, i5*poswall
