--- a/src/datalogging/package.xml
+++ b/src/datalogging/package.xml
@@ -21,6 +21,7 @@
   <depend>std_msgs</depend>
   <depend>rosdeps</depend>
   <depend>commsmsgs</depend>
+  <depend>rosbag2_cpp</depend>
 
   <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
   <build_export_depend>eigen</build_export_depend>
