--- a/src/system_launcher/config/rbsim.yaml
+++ b/src/system_launcher/config/rbsim.yaml
@@ -6,9 +6,9 @@
     l: 0.3535          # length of drone
     w: 0.3535          # width of drone
     he: 0.306          # height of drone
-    In: [0.02166666666666667, 0.0, 0.0,
-        0.0, 0.02166666666666667, 0.0,
-        0.0, 0.0, 0.04000000000000001]  # inertia matrix
+    In: [0.023142, 0.0, 0.0,
+        0.0, 0.064328, 0.0,
+        0.0, 0.0, 0.056522]  # inertia matrix
     mass: 1.5       # mass of drone
     con_rad: 0.5    # radius of drone
     prop_dia: 0.254   # diameter of propeller
@@ -22,15 +22,15 @@
               12.0, 3.0, 1.5, 
               6.27, 52.27, 45.0, 
               15.68]  # PID limits, first 3 will need to be converted from deg to rads
-    kp: [1.25, 1.25, 4.47]  # proportional gains
-    kvp: [2.72, 2.7, 7.56]  # proportional velocity gains
-    kvi: [1.08, 1.07, 1.74]  # integral velocity gains
-    kvd: [0.56, -0.33, 0.45]  # derivative velocity gains
-    kap: [6.0, 6.0, 2.5]  # proportional acceleration gains
-    krp: [0.262, 0.303, 0.309]  # proportional rate gains
-    kri: [0.254, 0.305, 0.304]  # integral rate gains
-    krd: [-0.015, 0.0026, 0.0006]  # derivative rate gains
-    krff: [-0.002, -0.01, 0.004]  # feedforward rate gains
+    kp: [1.13, 1.18, 0.59]  # proportional gains
+    kvp: [2.79, 3.51, 7.74]  # proportional velocity gains
+    kvi: [0.19, 0.49, -2.85]  # integral velocity gains
+    kvd: [0.042, 0.14, 0.11]  # derivative velocity gains
+    kap: [6.72, 5.2, 2.92]  # proportional acceleration gains
+    krp: [0.294, 0.386, 0.342]  # proportional rate gains
+    kri: [0.286, 0.337, 0.31]  # integral rate gains
+    krd: [-0.009, -0.027, -0.022]  # derivative rate gains
+    krff: [-0.0007, -0.009, -0.024]  # feedforward rate gains
     vel_con_lims: [1.0, 1.0]  # velocity limits
     n: [-1.0, 0.0, 0.0,
         1.0, 0.0, 0.0,
