--- a/src/system_launcher/config/rbsim.yaml
+++ b/src/system_launcher/config/rbsim.yaml
@@ -22,9 +22,13 @@
               12.0, 3.0, 1.5, 
               6.27, 52.27, 45.0, 
               15.68]  # PID limits, first 3 will need to be converted from deg to rads
+                # limits for the Controller
+                # 0.0->1800, 0.0->1800, 0.0->1800, 0.0->1, 0.0->1, 0.0->1, 0->20, 0.5->8, 0.5->4, 0.05->0.5, 0->1, 20->89, 0.0->0.5
+                # att_limsx,y,z, rate_limsx,y,z, lim_vel_horz, lim_vel_up, lim_vel_down, lim_thr_min, lim_thr_max, lim_tilt, lim_thr_xy_margin
+                # tot thr = 52.26768, 52.27 = lim_thr_max, 6.27 = lim_thr_min, 15.68 = lim_thr_xy_margin
     kp: [1.13, 1.18, 1.0]  # proportional gains
-    kvp: [2.79, 3.51, 7.74]  # proportional velocity gains
-    kvi: [0.19, 0.49, -2.85]  # integral velocity gains
+    kvp: [2.79, 3.51, 5.74]  # proportional velocity gains [2.79, 3.51, 7.74]
+    kvi: [0.19, 0.49, 0.65]  # integral velocity gains [0.19, 0.49, -2.85]
     kvd: [0.042, 0.14, 0.11]  # derivative velocity gains
     kap: [6.72, 5.2, 2.92]  # proportional acceleration gains
     krp: [0.294, 0.386, 0.342]  # proportional rate gains
